<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_KFE_RIX_VAC" Id="{d38b3a8d-c2e8-4a67-9aeb-873e21370c76}">
    <Declaration><![CDATA[VAR_GLOBAL

// MKS275 Gauges

{attribute 'pytmc' := ' pv: PC1K1:ZOS:GPI:1 '}
fb_PC1K1_ZOS_GPI_1 : FB_MKS275;
{attribute 'pytmc' := ' pv: MR1K2:SWITCH:GPI:1 '}
fb_MR1K2_SWITCH_GPI_1 : FB_MKS275;
{attribute 'pytmc' := ' pv: TV1K1:PLEG:GPI:1 '}
fb_TV1K1_PLEG_GPI_1 : FB_MKS275;
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:= TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 119 (EL3174)^AI Standard Channel 2^Value'}
{attribute 'pytmc' := ' pv: SL1K2:EXIT:GPI:1 '}
fb_SL1K2_EXIT_GPI_1 : FB_MKS275;
{attribute 'pytmc' := ' pv: MR2K2:FLAT:GPI:1 '}
fb_MR2K2_FLAT_GPI_1 : FB_MKS275;
{attribute 'pytmc' := ' pv: MR3K2:KBH:GPI:1 '}
fb_MR3K2_KBH_GPI_1 : FB_MKS275;
{attribute 'pytmc' := ' pv: MR4K2:KBV:GPI:1 '}
fb_MR4K2_KBV_GPI_1 : FB_MKS275;

//New Superbee piranis
{attribute 'pytmc' := ' pv: TM2K2:ATM:GPI:1 '}
fb_TM2K2_ATM_GPI_1 : FB_MKS275;

{attribute 'pytmc' := ' pv: LI4K2:K2A:GPI:1 '}
fb_LI4K2_K2A_GPI_1 : FB_MKS275;

//MKS275 EP Gauges
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:= TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 111 (EP3174-0002)^AI Standard Channel 2^Value'}
{attribute 'pytmc' := ' pv: ST1K2:PPS:GPI:1 '}
fb_ST1K2_PPS_GPI_1 : FB_MKS275;


// MKS500 Gauges

{attribute 'pytmc' := ' pv: PC1K1:ZOS:GCC:1 '}
fb_PC1K1_ZOS_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: MR1K2:SWITCH:GCC:1 '}
fb_MR1K2_SWITCH_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: TV1K1:PLEG:GCC:1 '}
fb_TV1K1_PLEG_GCC_1 : FB_MKS500;

{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 119 (EL3174)^AI Standard Channel 1^Value;
								 .i_xHV_ON	    :=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 123 (EL1124)^Channel 1^Input;
								 .i_xDisc_Active:=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 123 (EL1124)^Channel 2^Input;								 
								 .q_xHV_DIS		:= 	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 118 (EL2624)^Channel 1^Output	'}
{attribute 'pytmc' := ' pv: SL1K2:EXIT:GCC:1 '}
fb_SL1K2_EXIT_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: MR2K2:FLAT:GCC:1 '}
fb_MR2K2_FLAT_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: IM2K2:PPM:GCC:1 '}
fb_IM2K2_PPM_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: MR3K2:KBH:GCC:1 '}
fb_MR3K2_KBH_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: IM3K2:PPM:GCC:1 '}
fb_IM3K2_PPM_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: MR4K2:KBV:GCC:1 '}
fb_MR4K2_KBV_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: IM4K2:PPM:GCC:1 '}
fb_IM4K2_PPM_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: IM5K2:PPM:GCC:1 '}
fb_IM5K2_PPM_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: TM2K2:K2B:GCC:1 '}
fb_TM2K2_K2B_GCC_1 : FB_MKS500;


//MKS500 EP Gauges
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 111 (EP3174-0002)^AI Standard Channel 1^Value;	
							 .q_xHV_DIS		:= 	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^K2S2-DRL-01 (EP2624-0002)^Channel 1^Output	'}
{attribute 'pytmc' := ' pv: ST1K2:PPS:GCC:1 '}
fb_ST1K2_PPS_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: IM6K2:PPM:GCC:1 '}
fb_IM6K2_PPM_GCC_1 : FB_MKS500;


// MKS422
{attribute 'pytmc' := ' pv: TV4K2:GFS:1 '}
fb_TV4K2_GFS_1 : FB_MKS422;


// VGC Valves

{attribute 'pytmc' := ' pv: MR1K2:SWITCH:VGC:1 '}
fb_MR1K2_SWITCH_VGC_1 : FB_VGC;
{attribute 'pytmc' := ' pv: MR1K2:SWITCH:VGC:2 '}
fb_MR1K2_SWITCH_VGC_2 : FB_VGC;

{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 120 (EL1004)^Channel 1^Input;
								 .i_xClsLS	:=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 120 (EL1004)^Channel 2^Input;
								.q_xOPN_DO	:=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 121 (EL2004)^Channel 1^Output'}
{attribute 'pytmc' := ' pv: SL1K2:EXIT:VGC:1 '}
fb_SL1K2_EXIT_VGC_1 : FB_VGC;
{attribute 'pytmc' := ' pv: MR2K2:FLAT:VGC:1 '}
fb_MR2K2_FLAT_VGC_1 : FB_VGC;
{attribute 'pytmc' := ' pv: MR2K2:FLAT:VGC:2 '}
fb_MR2K2_FLAT_VGC_2 : FB_VGC;
{attribute 'pytmc' := ' pv: MR3K2:KBH:VGC:1 '}
fb_MR3K2_KBH_VGC_1 : FB_VGC;
{attribute 'pytmc' := ' pv: MR3K2:KBH:VGC:2 '}
fb_MR3K2_KBH_VGC_2 : FB_VGC;
{attribute 'pytmc' := ' pv: MR4K2:KBV:VGC:1 '}
fb_MR4K2_KBV_VGC_1 : FB_VGC;
{attribute 'pytmc' := ' pv: MR4K2:KBV:VGC:2 '}
fb_MR4K2_KBV_VGC_2 : FB_VGC;
{attribute 'pytmc' := ' pv: LI3K2:K2B:VWC:1 '}
fb_LI3K2_K2B_VWC_1 : FB_VGC;


// VGC EP Valves
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002)^Channel 1^Input;
								 .i_xClsLS	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002)^Channel 2^Input;
								.q_xOPN_DO	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002)^Channel 11^Output'}
{attribute 'pytmc' := ' pv: ST1K2:PPS:VGC:1 '}
fb_ST1K2_PPS_VGC_1 : FB_VGC;

// PIP_Gamma Pumps

{attribute 'pytmc' := ' pv: PC1K1:ZOS:PIP:1 '}
fb_PC1K1_ZOS_PIP_1 : FB_PIP_GAMMA;
//{attribute 'pytmc' := ' pv: PC1K1:ZOS:PIP:2 '}
//fb_PC1K1_ZOS_PIP_2 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: MR1K2:SWITCH:PIP:1 '}
fb_MR1K2_SWITCH_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: TV1K1:PLEG:PIP:1 '}
fb_TV1K1_PLEG_PIP_1 : FB_PIP_GAMMA;
{attribute 'TcLinkTo' := 	'.i_iPRESS		:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E3) (EL3064)^AI Standard Channel 1^Value;
								 .i_xSP_DI		:=  TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E4) (EL1004)^Channel 1^Input;
								 .q_xHVEna_DO	:= TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^B950_233_R02 (E2) (EL2794)^Channel 1^Output'}
{attribute 'pytmc' := ' pv: ST1K2:PPS:PIP:1 '}
fb_ST1K2_PPS_PIP_1 : FB_PIP_GAMMA;

{attribute 'TcLinkTo' := 	'.i_iPRESS		:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 7 (EL3064)^AI Standard Channel 1^Value;
								 .i_xSP_DI		:=  TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 8 (EL1004)^Channel 1^Input;
								 .q_xHVEna_DO	:= TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 6 (EL2794)^Channel 1^Output'}
{attribute 'pytmc' := ' pv: SL1K2:EXIT:PIP:1 '}
fb_SL1K2_EXIT_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: MR2K2:FLAT:PIP:1 '}
fb_MR2K2_FLAT_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: MR3K2:KBH:PIP:1 '}
fb_MR3K2_KBH_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: MR4K2:KBV:PIP:1 '}
fb_MR4K2_KBV_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: TV4K2:PIP:1 '}
fb_TV4K2_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: IM5K2:PPM:PIP:1 '}
fb_IM5K2_PPM_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: PA1K2:PIP:1 '}
fb_PA1K2_PIP_1 : FB_PIP_GAMMA;


//SIP PIP NexTORR Pumps
{attribute 'pytmc' := ' pv: IM2K2:PPM:PIP:1 '}
fb_IM2K2_PPM_PIP_1 : FB_PIP_SIP;
{attribute 'pytmc' := ' pv: IM3K2:PPM:PIP:1 '}
fb_IM3K2_PPM_PIP_1 : FB_PIP_SIP;
{attribute 'pytmc' := ' pv: IM4K2:PPM:PIP:1 '}
fb_IM4K2_PPM_PIP_1 : FB_PIP_SIP;
{attribute 'pytmc' := ' pv: LI2K2:K2A:PIP:1 '}
fb_LI2K2_K2A_PIP_1 : FB_PIP_SIP;
{attribute 'pytmc' := ' pv: ST3K2:TERM:PIP:1 '}
fb_ST3K2_TERM_PIP_1 : FB_PIP_SIP;


//VFS

{attribute 'pytmc' := '		pv: TV1K2:VFS:1	'}
	{attribute 'TcLinkTo' := 	'.q_xPress_OK		:= 	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xPress_OK;	
  							      .q_xOPN_SW			:=  TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOPN_SW;	
  							 .q_xCLS_SW			:=  TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xCLS_SW;	
							 .q_xVAC_FAULT_Reset:= 	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVAC_FAULT_Reset;	
							 .q_xOverrideMode	:= 	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOverrideMode;
								 .q_xOverrideOpen	:= TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOverrideOpen;
								 .i_xTrigger		:=	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xTrigger;
								 .i_xVFS_Open		:= TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVFS_Open;
								 .i_xVFS_Closed		:=	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVFS_Closed;	
							 .i_xVAC_FAULT_OK	:=  TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVAC_FAULT_OK;	
							 .i_xMPS_OK			:=  TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xMPS_OK;	
							 .i_eVFS_State		:=	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_eVFS_State;
								 .q_xVetoValveOpenDO := TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVetoValveOpenDO;
								 .q_xVetoValveClosed := TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVetoValveClosed	'}	
fb_TV1K2_VFS_Interface : FB_VFS_Interface; 


//Interface for KFE Valve - SP1K1-MONO-VGC-2
{attribute 'pytmc' :=' pv: PC1K1:ZOS:GCC:1:ILK'}
	st_RIX_ILK			:	ST_EXT_ILK;
	
	{attribute 'TcLinkTo' := 	'.q_xILK_OK_DO	:= TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EL2794)^Channel 1^Output '}
	
	fb_RIX_ILK			:	FB_EXT_ILK;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>